<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:background="@drawable/gradient_grey">

    <ImageView
        android:id="@+id/Forgetlogo"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:src="@drawable/ic_squarespace11"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Forgetlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/thirtythree"
        android:text="@string/AccountVerification"
        android:textColor="@color/black"
        android:textSize="@dimen/textsplash"
        android:textStyle="bold"



        />

    <TextView
        android:id="@+id/contiue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification"
        android:layout_centerHorizontal="true"
        android:text="@string/PassRecovery"
        android:textSize="@dimen/Twenty"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/userlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/contiue"
        android:layout_marginLeft="@dimen/thirtythree"
        android:layout_marginTop="@dimen/thirty"
        android:textSize="@dimen/Twenty"
        android:textColor="@color/black"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/veremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contiue"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginTop="@dimen/fiffive"
        android:layout_marginRight="@dimen/thirty"
        android:hint="@string/enter_email" />
    <Button
        android:id="@+id/Forgetbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/textsplash"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginRight="@dimen/thirty"
        android:padding="@dimen/twelve"
        android:layout_below="@+id/veremail"

        />

</RelativeLayout>